--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -12,6 +12,7 @@ token:
   expiration_time: 86400000
   secret: user_token
 
+
 spring:
   application:
     name: apigateway-service
@@ -53,6 +54,14 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/actuator/**
+            - Method=GET,POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
@@ -82,4 +91,8 @@ spring:
                 baseMessage: Hi, there.
                 preLogger: true
                 postLogger: true
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, httptrace
