--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    stream:
+      username: guest
+      password: guest
   profiles:
     active: native
   cloud:
@@ -14,3 +20,10 @@ spring:
         git:
 #          uri: file:///Users/jw/Desktop/Projects/msaStudyConfig
           uri: https://github.com/JENOSS/msaStudyConfig
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
