--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
     implementation 'com.h2database:h2:1.3.176'
     implementation 'org.modelmapper:modelmapper:2.3.8'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
