--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.3.8'
     implementation 'com.h2database:h2:1.3.176'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
