--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.3.RELEASE'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
 
     implementation 'com.h2database:h2:1.3.176'
     implementation 'org.modelmapper:modelmapper:2.3.8'
