--- a/apigateway-service/src/main/resources/bootstrap.yml
+++ b/apigateway-service/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8888
-      name: ecommerce
+      name: user-services
 #  profiles:
 #    active: dev
